objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>Service_Territory_Name__c</fullName>
        <formula>ServiceTerritory.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type_Group_Name__c</fullName>
        <formula>Work_Type_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chronos Bot Work Type Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chronos Bot Work Type Group</label>
        <referenceTo>WorkTypeGroup</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>